; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_stmtexpr.c_testmain.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_stmtexpr.c_testmain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"statement expression\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @testmain() #0 {
  %1 = alloca i32, align 4
  %2 = alloca double, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = call i32 @print(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i32 3, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @expect(i32 3, i32 %6)
  store double 3.000000e+00, double* %2, align 8
  %8 = load double, double* %2, align 8
  %9 = fptosi double %8 to i32
  %10 = call i32 @expectf(double 3.000000e+00, i32 %9)
  store i32 5, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @expect(i32 5, i32 %12)
  ret void
}

declare dso_local i32 @print(i8*) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @expectf(double, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
